test_src/compiler_errors/types/binary/UnsignedRightShiftFloatError4.b
class UnsignedRightShiftFloatError4 {
    void test() {
        Double value = 14.0;
        println(value >>>= 6);
    }
}
